revert old fix and align arrows on popovers

--- a/src/modules/settings/styles/_rsuite.less
+++ b/src/modules/settings/styles/_rsuite.less
@@ -105,15 +105,6 @@
   z-index: 3150;
 }
 
-.@{ns}popover[class*='placement-top'] > .@{ns}popover-arrow::after {
-  margin-left: -3px;
-}
-
-.@{ns}tooltip.placement-right-end .@{ns}tooltip-arrow,
-.@{ns}tooltip.placement-left-end .@{ns}tooltip-arrow {
-  bottom: 3px;
-}
-
 @media screen and (max-width: 769px) {
   .@{ns}modal {
     width: 95%;
@@ -123,6 +114,18 @@
   .@{ns}modal-dialog {
     width: 100%;
   }
+}
+
+.@{ns}popover[class*='placement-top'],
+.@{ns}tooltip[class*='placement-top'] {
+  -webkit-transform: none !important;
+  transform: none !important;
+}
+
+.@{ns}tooltip[class*='placement-left'] {
+  -webkit-transform: none !important;
+  transform: none !important;
+  margin-left: -6px;
 }
 
 .@{ns}nav-item-content {
